--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "faker": "^5.1.0",
     "mariadb": "^2.5.1",
     "nodemon": "^2.0.6",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "sequelize": "^6.3.5",
     "styled-components": "^5.2.1",
     "supertest": "^6.0.1",
